--- a/news/scss/_small.scss
+++ b/news/scss/_small.scss
@@ -68,7 +68,7 @@ nav ul.open {
 nav ul li a {
     display: block;
     background-color: $secondaryColor;
-    color: $accentColor;
+    color:black;
  
     padding: .5rem 2%;
     text-decoration: none;
@@ -83,7 +83,7 @@ nav ul li a:hover {
 }
 nav ul li.active a {
     background-color: #7b9fcf;
-    color: $accentColor;
+    color: white;
 }
 /*----------- MAIN --------------*/
 main {
